<resources>
    <string name="app_name">LibGame</string>
    <string name="home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="evaluation">Evaluation</string>
    <string name="lorem_fill">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nulla neque, varius in diam cursus, cursus ornare est. Maecenas in tempus est, ac sollicitudin lacus. Ut luctus vitae nulla a finibus. Cras tincidunt augue sit amet orci lobortis tincidunt. Aenean at lorem at est ullamcorper dignissim. Praesent dui tellus, laoreet at risus venenatis, tempor viverra massa. Maecenas lorem nisi, ullamcorper sed consectetur et, commodo pulvinar libero. Integer efficitur non purus at eleifend. </string>
    <string name="cancel">Cancel</string>
    <string name="publisher">Publisher</string>
    <string name="developer">Developer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="chooseImage">Choose an image</string>
    <string name="settings">Settings</string>
    <string name="error_empty_fields">Error, please fill all the fields</string>
    <string name="error_img_too_big">Image too big. Choose another one</string>
    <string name="game_saved">Game saved</string>
    <string name="game_edited">Game edited</string>
    <string name="game_deleted">Game deleted</string>
    <string name="developer_saved">Developer saved</string>
    <string name="developer_edited">Developer edited</string>
    <string name="developer_deleted">Developer deleted</string>
    <string name="publisher_saved">Publisher saved</string>
    <string name="publisher_deleted">Publisher deleted</string>
    <string name="publisher_edited">Publisher edited</string>

    <string name="title_activity_add_game">Add Game</string>
    <string name="title_activity_add_developer">Add Developer</string>
    <string name="title_activity_add_publisher">Add Publisher</string>
    <string name="title_activity_add_evaluation">Add Evaluation</string>
    <string name="title_activity_edit_game">Edit Game</string>
    <string name="title_activity_edit_developer">Edit Developer</string>
    <string name="title_activity_edit_publisher">Edit Publisher</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_home">Home</string>
    <string name="Dodskamp">Coluccia Mickael</string>
    <string name="Amaterasu">Haziri Endrit</string>
    <string name="aboutDescription">In context of the Android course we need to create an application where we can add/edit/remove some information in three different table.</string>


    <string name="btn_en">English</string>
    <string name="btn_fr">French</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="connected_as">Connected as:</string>

</resources>
